RTL alignment fix

--- a/less/pageNav.less
+++ b/less/pageNav.less
@@ -47,9 +47,6 @@
   // --------------------------------------------------
   &.has-icon-right,
   .dir-rtl &.has-icon-auto {
-    .pagenav__btn-inner {
-      flex-direction: row-reverse;
-    }
     .icon {
       padding-left: (@icon-padding / 2);
     }
